prevent horizontal scroll

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Amiko|Arima+Madurai|Farsan|Lalezar|Mogra|Rakkas|Rasa|Shrikhand|Suez+One|Yatra+One|Architects+Daughter');
 html {
     font-family: 'Farsan', sans-serif;
     -ms-text-size-adjust: 100%;
@@ -7,6 +6,7 @@ html {
 
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 article,
